[package]
name = "crfad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive"] }
rand = "0.8.5"
